syntax = "proto3";

package api;

option go_package = "gen/pb";

import "common.proto";

message Intersections {
    message ListRequest {
        Polygon polygon = 1;
        // filters
        repeated string departmentalOrganizationNames = 2; // optional
        repeated string sportsAreaNames = 3 [(validate.rules).repeated.items.string = {ignore_empty: true}]; // optional
        repeated string sportsAreaTypes = 4 [(validate.rules).repeated.items.string = {ignore_empty: true}]; // optional
        Availability availability = 5; // optional
        repeated string sportKinds = 6 [(validate.rules).repeated.items.string = {ignore_empty: true}]; // optional

        bool withUnion = 7; // optional; default: false
    }

    message ListResponse {
        repeated CirclesCluster intersections = 1;
        ListStats listStats = 2;
        repeated CirclesCluster unions = 3; // optional
        ListStats unionsListStats = 4;  // optional
    }
}

message Unions {
    message ListRequest {
        Polygon polygon = 1;
        // filters
        repeated string departmentalOrganizationNames = 2; // optional
        repeated string sportsAreaNames = 3 [(validate.rules).repeated.items.string = {ignore_empty: true}]; // optional
        repeated string sportsAreaTypes = 4 [(validate.rules).repeated.items.string = {ignore_empty: true}]; // optional
        Availability availability = 5; // optional
        repeated string sportKinds = 6 [(validate.rules).repeated.items.string = {ignore_empty: true}]; // optional
    }

    message ListResponse {
        repeated CirclesCluster unions = 1;
        ListStats listStats = 2;
    }
}