syntax = "proto3";

package api;

option go_package = "gen/pb";

import "common.proto";

message SportsObjects {
    message ListRequest {
        Pagination pagination = 1;
        // filters
        repeated string objectNames = 2 [(validate.rules).repeated.items.string = {ignore_empty: true}]; // optional
        repeated uint32 departmentalOrganizationIds = 3 [(validate.rules).repeated.items.uint32 = {ignore_empty: true, gte: 100000}]; // optional
        repeated string departmentalOrganizationNames = 4; // optional
        repeated Availability availabilities = 7; // optional
    }

    message ListResponse {
        repeated SportsObject sportsObjects = 1;
        ListStats listStats = 2;
    }

    message GetRequest {
        uint32 objectId = 2 [(validate.rules).uint32 = {gte: 100000}];
    }

    message GetResponse {
        SportsObject sportsObject = 1;
    }
}

message SportsObjectsDetailed {
    message ListRequest {
        Pagination pagination = 1;
        // filters
        uint32 objectId = 2 [(validate.rules).uint32 = {ignore_empty: true, gte: 100000}]; // optional
        string objectName = 3 [(validate.rules).string = {ignore_empty: true}]; // optional
        uint32 departmentalOrganizationId = 4 [(validate.rules).uint32 = {ignore_empty: true, gte: 200000}]; // optional
        string departmentalOrganizationName = 5; // optional
        string sportsAreaName = 6 [(validate.rules).string = {ignore_empty: true}]; // optional
        string sportsAreaType = 7 [(validate.rules).string = {ignore_empty: true}]; // optional
        Availability availability = 8; // optional
        string sportKind = 9 [(validate.rules).string = {ignore_empty: true}]; // optional
    }

    message ListResponse {
        repeated SportsObjectDetailed sportsObjects = 1;
        ListStats listStats = 2;
    }
}